# openGl-perspective-camera

./: .gitignore  CMakeLists.txt  README.md
src/: Constants.h  main.cpp
src/application/: Application.cpp  Application.h
src/camera/: Camera.cpp  Camera.h
src/polyline/base/: BaseShape.cpp  BaseShape.h
src/polyline/shape_generator/: ShapeGenerator.cpp  ShapeGenerator.h
src/utils/screen/: ScreenSize.cpp  ScreenSize.h
